logging/crashing-app/crashing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: crashing-app
  namespace: crashing-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: crashing-app
  type: ClusterIP
